yoshimi 2.3.1 M

2023-11-09 Will
bn 2279
HTML "Yoshimi Control Data" now complete to replace .ods file.
Removed ambiguity in CBtest
    default is to *not* display text from miscMsg
Forgot to disable effects patch in Interchange :(


2023-11-07 Will
bn 2278
BugFix: Wrong spelling in lists for amplitude LFO.
BufFix: Ucopy/Upaste type text not updating
GUI unified presets done for LFOs
GUI unified presets done for Envelopes
GUI unified presets done for Filters
GUI unified presets done for Effects
Some UI cleanups

2023-11-06 Will
bn 2277
GUI unified presets done for Resonance and Waveform.
Further work on Yoshimi Controls.

2023-11-04 Will
bn 2276
Changed midi CC conversion names from ~Inner to more meaningful ~Adjusted
Further work on HTML Yoshimi Controls (not now updating old .ods file)

2023-11-03 Will
bn 2275
GUI unified presets complete for AddSynth, AddVoice, SubSynth, Padsynth
Started building HTML version of Control values to replace .ods version
    (with additions and corrections)

2023-10-31 Will
bn 2274
Further revisions to unified presets, now also applied to Padsynth.
Human friendly preset group Gui field in window now done
Outline code in place for deleteing entries from the Gui

[presets]
revised unfied presets so it can return human readable preset groups
    applied this to GUI code also addsynth global.
window/text sizes now correct

[presets]
bn 2273
Trial of GUI unified presets with subSynth
Not yet done:
    delete
    title bar
    preset group

2023-10-22 Will
bn 2272
Merged in 'presets' updates.
Disabled CLI direct swap across sys,ins,part effects - causing confusion!
CLI now gives reminder to route insert effects before chosing the effect.

[presets]
bn 2271
BugFix: Formant filter reporting wrong vowel numbers (off by 1)
Fixed regression: CLI and MIDI-Learn not setting formant frequency
Set specific type entries for presets "list, copy, paste"
Corrected metainfo icon type local->stock

[presets]