@@ -59,7 +59,7 @@
         <td>0~2</td>
         <td>255</td>
         <td>255</td>
-        <td>Depth</td>
+        <td>Depth (100% is half control setting so waveform can become re-entrant)</td>
       </tr>
       <tr>
         <td>delay</td>
@@ -72,7 +72,7 @@
         <td>0~2</td>
         <td>255</td>
         <td>255</td>
-        <td>Delay</td>
+        <td>Delay before LFO starts</td>
       </tr>
       <tr>
         <td>start</td>
@@ -85,7 +85,7 @@
         <td>0~2</td>
         <td>255</td>
         <td>255</td>
-        <td>Start</td>
+        <td>Point of time in LFO cycle to sync to</td>
       </tr>
       <tr>
         <td>amplitudeRandomness</td>
