@@ -99,7 +99,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Range of panning randomness</td>
+        <td>L/R ange of random panning</td>
       </tr>
       <tr>
         <td>invertPhase</td>
