@@ -40,7 +40,7 @@
         <td>0~15</td>
         <td>0~63,241,242</td>
         <td>16+(0~8)</td>
-        <td>effect number</td>
+        <td>effect No.</td>
         <td>255</td>
         <td>ret. 0,1</td>
         <td>255</td>
@@ -53,7 +53,7 @@
         <td>16</td>
         <td>0~63,241,242</td>
         <td>16+(0~8)</td>
-        <td>effect number</td>
+        <td>effect No.</td>
         <td>255</td>
         <td>ret. 0,1</td>
         <td>255</td>
@@ -62,11 +62,11 @@
       </tr>
       <tr>
         <td>bpm</td>
-        <td>?</td>
+        <td>0,1</td>
         <td>17</td>
         <td>0~63,241,242</td>
         <td>16+(0~8)</td>
-        <td>effect number</td>
+        <td>effect No.</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
@@ -75,16 +75,16 @@
       </tr>
       <tr>
         <td>bpmStart</td>
-        <td>?</td>
+        <td>0~127</td>
         <td>18</td>
         <td>0~63,241,242</td>
         <td>16+(0~8)</td>
-        <td>effect number</td>
+        <td>effect No.</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>???</td>
+        <td>Point of time in LFO cycle to sync to<br>(for effects that have an LFO)</td>
       </tr>
       <tr>
         <td>changed</td>
@@ -92,7 +92,7 @@
         <td>129</td>
         <td>0~63,241,242</td>
         <td>16+(0~8)</td>
-        <td>effect number</td>
+        <td>effect No.</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
@@ -121,7 +121,7 @@
         <td>4</td>
         <td>242</td>
         <td>255</td>
-        <td>effect number</td>
+        <td>effect No.</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
@@ -134,7 +134,7 @@
         <td>5</td>
         <td>242</td>
         <td>255</td>
-        <td>effect number</td>
+        <td>effect No.</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
@@ -147,7 +147,7 @@
         <td>6</td>
         <td>242</td>
         <td>255</td>
-        <td>effect number</td>
+        <td>effect No.</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
@@ -215,7 +215,7 @@
         <td>4</td>
         <td>241</td>
         <td>255</td>
-        <td>effect number</td>
+        <td>effect No.</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
@@ -228,7 +228,7 @@
         <td>5</td>
         <td>241</td>
         <td>255</td>
-        <td>effect number</td>
+        <td>effect No.</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
@@ -241,7 +241,7 @@
         <td>7</td>
         <td>241</td>
         <td>255</td>
-        <td>effect number</td>
+        <td>effect No.</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
