@@ -163,16 +163,16 @@
       </tr>
       <tr>
         <td>edit</td>
-        <td></td>
+        <td>0</td>
         <td>24</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>local to GUI --- needs investigating!!!</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>All</td>
+        <td>2</td>
+        <td>0~3</td>
+        <td>255</td>
+        <td>255</td>
+        <td>local to GUI (opens the graphical editing window)</td>
       </tr>
       <tr>
         <td>enableFreeMode</td>
@@ -181,7 +181,7 @@
         <td>0~63</td>
         <td>0~15</td>
         <td>All</td>
-        <td>3</td>
+        <td>2</td>
         <td>0~3</td>
         <td>255</td>
         <td>255</td>
@@ -206,7 +206,7 @@
         <td>0~63</td>
         <td>0~15</td>
         <td>All</td>
-        <td>3</td>
+        <td>2</td>
         <td>0~3</td>
         <td>255</td>
         <td>255</td>
@@ -219,7 +219,7 @@
         <td>0~63</td>
         <td>0~15</td>
         <td>All</td>
-        <td>3</td>
+        <td>2</td>
         <td>0~3</td>
         <td>255</td>
         <td>255</td>
@@ -232,7 +232,7 @@
         <td>0~63</td>
         <td>0~15</td>
         <td>All</td>
-        <td>3</td>
+        <td>2</td>
         <td>0~3</td>
         <td>255</td>
         <td>255</td>
@@ -258,7 +258,7 @@
         <td>0~63</td>
         <td>0~15</td>
         <td>All</td>
-        <td>3</td>
+        <td>2</td>
         <td>0~3</td>
         <td>255</td>
         <td>255</td>
@@ -271,7 +271,7 @@
         <td>0~63</td>
         <td>0~15</td>
         <td>All</td>
-        <td>3</td>
+        <td>2</td>
         <td>0~3</td>
         <td>255</td>
         <td>255</td>
@@ -288,7 +288,7 @@
         <td>0~3</td>
         <td>0~127</td>
         <td>255</td>
-        <td>Add point -- 'Control = point number<br>'offset' = X incremental value, 'Value' = Y value</td>
+        <td>Add point -- 'Control' = point number<br>'offset' = X incremental value, 'value' = Y value</td>
       </tr>
       <tr>
         <td>envelopePointDelete</td>
@@ -297,11 +297,11 @@
         <td>0~63</td>
         <td>0~15</td>
         <td>All</td>
-        <td>3</td>
+        <td>4</td>
         <td>0~3</td>
         <td>255</td>
         <td>255</td>
-        <td>Delete point -- 'Control = point number<br>Returns 'value' number of points remaining</td>
+        <td>Delete point -- 'Control' = point number<br>Returns 'value' number of points remaining</td>
       </tr>
       <tr>
         <td>envelopePointChange</td>
@@ -310,11 +310,11 @@
         <td>0~63</td>
         <td>0~15</td>
         <td>All</td>
-        <td>3</td>
+        <td>5</td>
         <td>0~3</td>
         <td>0~127</td>
         <td>255</td>
-        <td>Adjust -- 'Control = point number<br>'offset' = X incremental value, 'Value' = Y value</td>
+        <td>Adjust -- 'Control' = point number<br>'offset' = X incremental value, 'value' = Y value</td>
       </tr>
     </tbody>
   </table>
