@@ -401,7 +401,7 @@
       </tr>
       <tr>
         <td>defaultPart</td>
-        <td>?</td>
+        <td>0~63</td>
         <td>96</td>
         <td>240</td>
         <td>255</td>
