@@ -73,7 +73,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Enable random panning</td>
+        <td>Set random panning behaviour</td>
       </tr>
       <tr>
         <td>randomWidth</td>
