@@ -62,7 +62,7 @@ div.effRightnote {
 
 
 thead th:nth-child(1) {
-  width: 20%;
+  width: 19%;
 }
 
 thead th:nth-child(2) {
@@ -70,7 +70,7 @@ thead th:nth-child(2) {
 }
 
 thead th:nth-child(3) {
-  width: 4%;
+  width: 3.5%;
 }
 
 thead th:nth-child(4) {
@@ -82,11 +82,11 @@ thead th:nth-child(5) {
 }
 
 thead th:nth-child(6) {
-  width: 7%;
+  width: 6.5%;
 }
 
 thead th:nth-child(7) {
-  width: 6%;
+  width: 5.5%;
 }
 
 thead th:nth-child(8) {
@@ -98,7 +98,7 @@ thead th:nth-child(9) {
 }
 
 thead th:nth-child(10) {
-  width: 7%;
+  width: 6.5%;
 }
 
 td {
