@@ -73,7 +73,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Set random pan behavouir</td>
+        <td>Set random panning behaviour</td>
       </tr>
       <tr>
         <td>randomWidth</td>
@@ -86,7 +86,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Range of panning randomness</td>
+        <td>L/R range of random panning</td>
       </tr>
       <tr>
         <td>bandwidth</td>
