@@ -1,12 +1,17 @@
 yoshimi 2.3.1 M
 
 2023-11-09 Will
+bn 2280
+BugFix: copy/paste assuming text returned in text message 0
+Resolved ambiguities in Yoshimi Control Data
+Added copy/paste details
+
+2023-11-09 Will
 bn 2279
 HTML "Yoshimi Control Data" now complete to replace .ods file.
 Removed ambiguity in CBtest
     default is to *not* display text from miscMsg
 Forgot to disable effects patch in Interchange :(
-
 
 2023-11-07 Will
 bn 2278
